# Autonomous-Vision-Guided-Robotic-Arm

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  PROJECT_GUIDE.md  PROJECT_SUMMARY.md  README.md  StartHelloPos_handoff.json  dual_camera_calibration.py  gripper_sensor_calibration.py  requirements.txt  robot_log_20260508_201523.csv  robot_log_20260508_201729.csv  robot_log_20260508_201739.csv  robot_log_20260508_201815.csv  run_fk_check.py  start_gripper_calibration.bat  start_robot.bat  start_robot_v2.bat  test_cameras.py
.claude/: settings.local.json
.claude/commands/: robot-check.md  sync-docs.md
benchmarks/: latency_profiler.py  pick_place_test.py  report_generator.py  tracking_accuracy.py
dashboard/backend/: server.py
dashboard/frontend/: controls.js  index.html  robot_viz.js
kinematics/: CMakeLists.txt
kinematics/bindings/: py_kinematics.cpp
kinematics/include/: kinematics.hpp
kinematics/src/: dh_kinematics.cpp  ik_solver.cpp  jacobian.cpp  trajectory.cpp
kinematics/tests/: test_kinematics.cpp
motor_daemon/: CMakeLists.txt
motor_daemon/include/: daemon_protocol.hpp  pid_controller.hpp  serial_comm.hpp  trajectory_tracker.hpp
motor_daemon/src/: motor_daemon.cpp  pid_controller.cpp  serial_comm.cpp  trajectory_tracker.cpp
robot_sam2_app/: app.py  config.py  hardware.py  state.py  tracking.py  utils.py
robot_sam2_app/assets/: StartHelloPos.json  joint_sim_calibration.json  so101_simple_sim.urdf
robot_sam2_app/robot_sam2_app/: __init__.py  app.py  config.py  control.py  go_home_util.py  hardware.py  state.py
robot_sam2_app/robot_sam2_app/filters/: kalman_tracker.py
robot_sam2_app/robot_sam2_app/trajectory/: planner.py  spline.py  velocity_profile.py
robot_sam2_app/robot_sam2_app/vision/: grasp_planner.py  sam2_segmenter.py
robot_sam2_app/vision/: __init__.py
robot_sam2_app_v2/robot_sam2_app/: app.py  config.py  control.py  data_logger.py  go_home_util.py  hardware.py  main.py  simulation.py  state.py  vl53_sensor.py
robot_sam2_app_v2/robot_sam2_app/filters/: __init__.py  ukf_3d.py
robot_sam2_app_v2/robot_sam2_app/grasp/: __init__.py  dataset_collector.py  quality.py
robot_sam2_app_v2/robot_sam2_app/trajectory/: __init__.py  collision_check.py
robot_sam2_app_v2/robot_sam2_app/vision/: depth_perception.py  rfdetr_selector.py  scene_3d.py  vqa_detector.py
robot_system/: main.py
robot_system/calibration/: base_camera_to_robot.py
robot_system/control/: distance_servo.py  lerobot_adapter.py  trajectory.py  visual_servo.py
robot_system/kinematics/: forward_kinematics.py  geometry.py  inverse_kinematics.py  joint_limits.py  workspace.py
robot_system/perception/: base_camera_detector.py  mask_features.py  sam2_adapter.py
robot_system/tasks/: handoff_grasp.py  table_pick.py
robot_system/tests/: test_calibration.py  test_distance_servo.py  test_forward_kinematics.py  test_handoff_grasp.py  test_inverse_kinematics.py  test_lerobot_adapter.py  test_mask_features.py  test_sam2_adapter.py  test_table_pick.py  test_trajectory.py  test_visual_servo.py
robot_system/tools/: inspect_lerobot.py  plot_workspace.py  test_approach_live.py  test_handoff_live.py
robot_system/utils/: logger.py
ros2_ws/src/robot_sam2_ros/: CMakeLists.txt  package.xml
ros2_ws/src/robot_sam2_ros/action/: MoveToTarget.action
ros2_ws/src/robot_sam2_ros/config/: robot_params.yaml
ros2_ws/src/robot_sam2_ros/launch/: full_system.launch.py
ros2_ws/src/robot_sam2_ros/msg/: GraspCommand.msg  ObjectPose.msg
ros2_ws/src/robot_sam2_ros/robot_sam2_ros/: hardware_node.py  kinematics_node.py  sim_node.py  vision_node.py
tracking_cpp/: CMakeLists.txt
tracking_cpp/bindings/: py_tracker.cpp
tracking_cpp/include/: tracker.hpp
tracking_cpp/src/: csrt_tracker.cpp  optical_flow.cpp
