<?xml version="1.0"?>
<package format="3">
  <name>robot_sam2_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for the robot_sam2_app vision-guided robot arm system.</description>
  <maintainer email="user@example.com">robot_sam2_ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>action_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
